# goalpost

./: .gitignore  Anchor.toml  MASTER_PLAN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: anchor-ci.yml
apps/replay/: package.json  tsconfig.json
apps/replay/samples/: match1.jsonl
apps/replay/src/: cli.ts  record.ts  server.ts  types.ts
apps/web/: .env.example  goalpost-replay.d.ts  instrumentation-node.ts  instrumentation.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: AppShell.tsx  ClaimPanel.tsx  ConnectionStatusPill.tsx  EmptyState.tsx  ErrorBanner.tsx  JoinPanel.tsx  LockSettleControls.tsx  MarketExperience.tsx  (+12 more)
docs/: ARCHITECTURE.md  DEPLOY.md  DESIGN.md  OPEN_QUESTIONS.md  POSITIONING.md  README.md  TRUST_MODEL.md  TXLINE_FEEDBACK.md  TXLINE_NOTES.md
examples/: package.json  quickstart.ts  two-wallet-demo.ts
fixtures/samples/: auth_activation_response.json  fixtures_batch_validation.json  fixtures_snapshot.json  fixtures_validation.json  odds_snapshot.json  odds_updates.json  odds_validation.json  scores_snapshot.json  scores_stat_validation.json  scores_stat_validation_example.json  scores_stream_raw_sample.txt
programs/goalpost/: Cargo.toml
programs/goalpost/keys/: goalpost-keypair.json
programs/goalpost/src/: errors.rs  lib.rs  state.rs  txoracle.rs
programs/goalpost/src/instructions/: claim.rs  create_market.rs  join.rs  lock_market.rs  mod.rs  settle.rs
scripts/: recon.ts
tests/: goalpost.ts
(+16 files in other folders)
