[package]
name = "goalpost"
version = "0.1.0"
description = "Trustless World Cup settlement engine on Solana, verified via TxLINE on-chain Merkle proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "goalpost"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
